Making sure that the spacing between elements is correct.

--- a/preview-card/style.css
+++ b/preview-card/style.css
@@ -32,7 +32,7 @@ body {
 /* Typography */
 h1, h2, h3 {
     color: var(--color-black);
-    margin-bottom: 0;
+    margin: 0;
 }
 
 h1 {
@@ -90,6 +90,7 @@ h2 {
     display: flex;
     justify-content: flex-start;
     align-items: center;
+    margin: 2rem 0 1rem;
 }
 
 .card__avatar {
